# siddik-commerce-django

./: .gitignore  README.md  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0003_userprofile_gender_alter_userprofile_country.py  0004_alter_userprofile_avatar.py
alistyle/: settings.py  urls.py  utils.py  views.py
carts/: admin.py  context_processors.py  decorators.py  models.py  urls.py  utils.py  views.py
carts/migrations/: 0003_cart_coupon_usage.py  0004_remove_cart_coupon_usage.py
coupon/: admin.py  models.py  urls.py  views.py
coupon/migrations/: 0001_initial.py  0002_alter_coupon_min_order_amount.py  0003_couponusage_is_used.py
locale/: utils.locale.py
orders/: admin.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0003_alter_orderproduct_order.py  0004_alter_order_status.py  0005_order_order_subtotal.py
payment/: admin.py  models.py  sslcommerz.py  urls.py  views.py
payment/migrations/: 0001_initial.py  0002_alter_payment_status.py  0003_rename_transaction_id_payment_tran_id.py  0004_alter_payment_order.py
store/: models.py  views.py
store/migrations/: 0011_remove_productview_store_produ_session_71eb85_idx_and_more.py  0013_alter_bannerslider_image.py  0014_alter_bannerslider_image.py  0015_alter_bannerslider_image.py
templates/: base.html  home.html  simple-base.html
templates/accounts/: account_verification_email.html  register.html  signin.html
templates/includes/: alerts.html  footer.html  header.html  product-card.html  (+1 more)
(+16 files in other folders)
